--- a/package.json
+++ b/package.json
@@ -8,8 +8,14 @@
   "license": "MIT",
   "private": false,
   "dependencies": {
+    "axios": "^0.19.2",
     "next": "^9.3.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
+  },
+  "scripts": {
+    "dev": "next",
+    "build": "next build",
+    "start": "next start"
   }
 }
